{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 188,
  "lineage": "abbcf93d-d1d7-0c0b-61f6-fef0d4591b67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2152f24e62bb99d",
            "arn": "arn:aws:ec2:us-east-1:382859795217:elastic-ip/eipalloc-0e2152f24e62bb99d",
            "domain": "vpc",
            "id": "eipalloc-0e2152f24e62bb99d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-30-27.compute-1.amazonaws.com",
            "public_ip": "18.210.30.27",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip-regional"
            },
            "tags_all": {
              "Name": "nat-eip-regional"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:internet-gateway/igw-08cde7090bf13c360",
            "id": "igw-08cde7090bf13c360",
            "owner_id": "382859795217",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-igw"
            },
            "tags_all": {
              "Name": "eks-vpc-igw"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2152f24e62bb99d",
            "auto_provision_zones": "enabled",
            "auto_scaling_ips": "enabled",
            "availability_mode": "regional",
            "connectivity_type": "public",
            "id": "nat-15f3e13499f175971",
            "region": "us-east-1",
            "regional_nat_gateway_address": [
              {
                "allocation_id": "eipalloc-040ec8cbbfae38080",
                "association_id": "eipassoc-0c4d4b078839534fa",
                "availability_zone": "us-east-1f",
                "availability_zone_id": "use1-az5",
                "public_ip": "52.204.47.54",
                "status": "succeeded"
              }
            ],
            "regional_nat_gateway_auto_mode": "enabled",
            "route_table_id": "rtb-0968b19863ed70ff0",
            "tags": {
              "Name": "nat-gw-regional"
            },
            "tags_all": {
              "Name": "nat-gw-regional"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:network-acl/acl-0566b6f180411396b",
            "egress": [],
            "id": "acl-0566b6f180411396b",
            "ingress": [],
            "owner_id": "382859795217",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-009bdc53d6916a127",
              "subnet-0114347ce70fa6cda",
              "subnet-017337400b6c18476",
              "subnet-0e7a39e93527b1015"
            ],
            "tags": {
              "Name": "isolated-nacl",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-nacl",
              "Type": "isolated"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "isolated_egress_allow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3617743682",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0566b6f180411396b",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "isolated_egress_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2688332210",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0566b6f180411396b",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "deny",
            "rule_number": 200,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "isolated_ingress_allow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3285926210",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0566b6f180411396b",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "isolated_ingress_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2115054988",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0566b6f180411396b",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "deny",
            "rule_number": 200,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a69f71f28d3878b61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-15f3e13499f175971",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08cde7090bf13c360",
            "id": "r-rtb-0dacdc0f9046e381a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.eks_vpc",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:route-table/rtb-0c685bd55b55d7154",
            "id": "rtb-0c685bd55b55d7154",
            "owner_id": "382859795217",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "isolated-rt",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-rt",
              "Type": "isolated"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "rtb-0c685bd55b55d7154",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:route-table/rtb-0a69f71f28d3878b6",
            "id": "rtb-0a69f71f28d3878b6",
            "owner_id": "382859795217",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-15f3e13499f175971",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt",
              "Type": "private"
            },
            "tags_all": {
              "Name": "private-rt",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "rtb-0a69f71f28d3878b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:route-table/rtb-0dacdc0f9046e381a",
            "id": "rtb-0dacdc0f9046e381a",
            "owner_id": "382859795217",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08cde7090bf13c360",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt",
              "Type": "public"
            },
            "tags_all": {
              "Name": "public-rt",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "rtb-0dacdc0f9046e381a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a32a004574d7c22",
            "region": "us-east-1",
            "route_table_id": "rtb-0c685bd55b55d7154",
            "subnet_id": "subnet-017337400b6c18476"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032da2b033a34f581",
            "region": "us-east-1",
            "route_table_id": "rtb-0c685bd55b55d7154",
            "subnet_id": "subnet-009bdc53d6916a127"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c45b5463e3dea6d",
            "region": "us-east-1",
            "route_table_id": "rtb-0c685bd55b55d7154",
            "subnet_id": "subnet-0e7a39e93527b1015"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051d22cf337d05095",
            "region": "us-east-1",
            "route_table_id": "rtb-0c685bd55b55d7154",
            "subnet_id": "subnet-0114347ce70fa6cda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.isolated",
            "aws_subnet.isolated",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a07c886a4bf4627",
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6",
            "subnet_id": "subnet-0dbb23b716ee73a38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9512c602e917a69",
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6",
            "subnet_id": "subnet-000bf8fd7d4c4afa6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024a141ff42959df5",
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6",
            "subnet_id": "subnet-0636953717e784e07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bfb951cd423c4f0",
            "region": "us-east-1",
            "route_table_id": "rtb-0a69f71f28d3878b6",
            "subnet_id": "subnet-0ec522f1d1b6ae976"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe6f6561b733a7d",
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a",
            "subnet_id": "subnet-0304a18c42fe5f2f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9808bcdb1b90968",
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a",
            "subnet_id": "subnet-068c35d60204759cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031b53e3bfd961682",
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a",
            "subnet_id": "subnet-04065d112fcabd4aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076fe57f2cb604a9f",
            "region": "us-east-1",
            "route_table_id": "rtb-0dacdc0f9046e381a",
            "subnet_id": "subnet-0cebe8ce221ae180d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-017337400b6c18476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017337400b6c18476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "isolated-us-east-1a-1",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-us-east-1a-1",
              "Type": "isolated"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-017337400b6c18476",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-009bdc53d6916a127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.200.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009bdc53d6916a127",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "isolated-us-east-1b-2",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-us-east-1b-2",
              "Type": "isolated"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-009bdc53d6916a127",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0e7a39e93527b1015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.208.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a39e93527b1015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "isolated-us-east-1c-3",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-us-east-1c-3",
              "Type": "isolated"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0e7a39e93527b1015",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0114347ce70fa6cda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.216.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0114347ce70fa6cda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "isolated-us-east-1d-4",
              "Type": "isolated"
            },
            "tags_all": {
              "Name": "isolated-us-east-1d-4",
              "Type": "isolated"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0114347ce70fa6cda",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0dbb23b716ee73a38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbb23b716ee73a38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1a-1",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a-1",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0dbb23b716ee73a38",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-000bf8fd7d4c4afa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000bf8fd7d4c4afa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1b-2",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b-2",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-000bf8fd7d4c4afa6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0636953717e784e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0636953717e784e07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1c-3",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1c-3",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0636953717e784e07",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0ec522f1d1b6ae976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec522f1d1b6ae976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-us-east-1d-4",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1d-4",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0ec522f1d1b6ae976",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0304a18c42fe5f2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0304a18c42fe5f2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1a-1",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a-1",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0304a18c42fe5f2f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-068c35d60204759cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c35d60204759cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1b-2",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b-2",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-068c35d60204759cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-04065d112fcabd4aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04065d112fcabd4aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1c-3",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1c-3",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-04065d112fcabd4aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:subnet/subnet-0cebe8ce221ae180d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.176.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cebe8ce221ae180d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "382859795217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-us-east-1d-4",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1d-4",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d8fd6bec7712b053"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "subnet-0cebe8ce221ae180d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available",
            "data.aws_vpcs.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:382859795217:vpc/vpc-0d8fd6bec7712b053",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e18dd06fe15c7d6",
            "default_route_table_id": "rtb-07763038179c3cd22",
            "default_security_group_id": "sg-00820c1462b1b9a37",
            "dhcp_options_id": "dopt-0998f08d3529ffacf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8fd6bec7712b053",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07763038179c3cd22",
            "owner_id": "382859795217",
            "region": "us-east-1",
            "tags_all": {
              "Name": "Venkata"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "382859795217",
            "id": "vpc-0d8fd6bec7712b053",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpcs.existing"
          ]
        }
      ]
    }
  ]
}